--- a/src/components/Home/welcome.scss
+++ b/src/components/Home/welcome.scss
@@ -15,6 +15,12 @@ $text-color: #c9c9c9;
     h1 {
       color: $text-color;
     }
+    h4 {
+      text-align: center;
+      color: rgb(160, 160, 160);
+      font-size: 0.7rem;
+      font-weight: 100;
+    }
     width: 400px;
     height: 400px;
     background-color: $dark;
